Fix pixel perfect alignment in dropdown [SCI-8032]

--- a/app/assets/stylesheets/protocols/preview_modal.scss
+++ b/app/assets/stylesheets/protocols/preview_modal.scss
@@ -59,7 +59,7 @@
             width: 170px;
 
             .search-field {
-              padding-left: 8px;
+              padding-left: 7px;
             }
           }
         }
